--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; /*It guarantees that the content box shrinks to make space for the padding and borders.*/
   margin: 0;
   padding: 0;
-  font-family: 'Alata', sans-serif;
+  font-family: 'Alata','Josefin Sans', sans-serif;
 }
